--- a/platformio.ini
+++ b/platformio.ini
@@ -14,9 +14,10 @@ board = az-delivery-devkit-v4
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-build_flags = -DESP32
+build_flags = -DESP32 -DOTA_USER=\"ota\" -DOTA_PASSWORD=\"${sysenv.OTA_PASSWORD:ota}\"
 lib_deps = 
 	bblanchon/ArduinoJson@^6.21.0
 	https://github.com/tzapu/WiFiManager.git
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
 	https://github.com/adafruit/Adafruit_ADS1X15
+	https://github.com/IPdotSetAF/ESPAsyncHTTPUpdateServer
