pico htmx client

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
 build_flags = -DESP32 -DOTA_USER=\"ota\" -DOTA_PASSWORD=\"${sysenv.OTA_PASSWORD:ota}\"
+extra_scripts = extra_script.py
 lib_deps = 
 	bblanchon/ArduinoJson@^6.21.0
 	https://github.com/tzapu/WiFiManager.git
