--- a/platformio.ini
+++ b/platformio.ini
@@ -22,3 +22,4 @@ lib_deps =
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
 	https://github.com/adafruit/Adafruit_ADS1X15
 	https://github.com/IPdotSetAF/ESPAsyncHTTPUpdateServer
+	mlesniew/PicoMQTT@^1.1.2
